--- a/src/main/resources/templates/project/samplebright/bright.html
+++ b/src/main/resources/templates/project/samplebright/bright.html
@@ -25,14 +25,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">客户分类</label>
                     <div class="col-sm-4">
-                        <select class="form-control col-sm-4" id="clientType">
-                            <option value="所有客户">所有客户</option>
-                            <option value="一类客户">一类客户</option>
-                            <option value="二类客户">二类客户</option>
-                            <option value="三类客户">三类客户</option>
-                            <option value="四类客户">四类客户</option>
-                            <option value="五类客户">五类客户</option>
-                        </select>
+                        <select class="form-control col-sm-4" id="clientType"></select>
                     </div>
                 </div>
 
@@ -40,13 +33,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">经营业态</label>
                     <div class="col-sm-4">
-                        <select class="form-control" id="workState">
-                            <option value="所有状态">所有状态</option>
-                            <option value="初始申请">初始申请</option>
-                            <option value="正常营业">正常营业</option>
-                            <option value="歇业">歇业</option>
-                            <option value="注销">注销</option>
-                        </select>
+                        <select class="form-control" id="workState"></select>
                     </div>
                 </div>
 
@@ -54,10 +41,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">客户经理</label>
                     <div class="col-sm-4">
-                        <select class="form-control" id="clientMGR">
-                            <option value="">1</option>
-                            <option value="">2</option>
-                        </select>
+                        <select class="form-control" id="clientMGR"></select>
                     </div>
                 </div>
 
@@ -98,7 +82,7 @@
 <script src="../static/js/include/publicMethod.js"></script>
 <script src="../static/bootstrap/js/treeview.js"></script>
 
-<script src="../static/js/admin/subscript/subscript.js"></script>
+<script src="../static/js/project/samplebright/bright.js"></script>
 <script src="../static/js/admin/subscript/subscriptAdd.js"></script>
 
 </body>
