修改bug: 1.将bootstrap table翻页处英文改为中文 2.将..录入..等 改为图标加录入等 3.table中长短不一的项从居中改为靠左 4.左侧菜单中加入返回首页功能 5.统一日期格式为xxxx/xx/xx 6.子菜单与父菜单错开

--- a/src/main/resources/templates/include/Navigation.html
+++ b/src/main/resources/templates/include/Navigation.html
@@ -171,6 +171,8 @@
             <!-- 选择菜单 -->
             <ul id="menu" class="sidebar-menu" data-widget="tree">
                 <li class="header">Content</li>
+            <!-- 首页 -->
+                <li id="indexForm" class="treeview"><a href=#><i class="fa fa-link"></i><span>首 页</span></a></li>
             </ul>
         </section>
         <!-- 选择菜单结束 -->
