--- a/src/main/resources/templates/project/resultinput/input/echartlist.html
+++ b/src/main/resources/templates/project/resultinput/input/echartlist.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<div id="main" style="overflow-x: hidden; overflow-y: scroll"></div>
+<div id="main" style="overflow-x: hidden; overflow-y: scroll; border: 1px solid gray"></div>
+<div id="main_two" style="overflow-x: hidden; overflow-y: scroll; border: 1px solid gray; margin-top: 5px; margin-right: 5px; float: left"></div>
+<div id="main_three" style="overflow-x: hidden; overflow-y: scroll; border: 1px solid gray; margin-top: 5px; margin-left: 5px"></div>
 
 <script src="../static/bootstrap/js/jquery-3.3.1.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
