--- a/src/main/resources/templates/project/resultinput/input/inputlist.html
+++ b/src/main/resources/templates/project/resultinput/input/inputlist.html
@@ -74,6 +74,7 @@
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
 <script src="../static/bootstrap/js/treeview.js"></script>
+<script src="../static/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
 
 <script src="../static/js/project/resultinput/inputlist.js"></script>
 
