--- a/src/main/resources/templates/admin/evaluationdescript/evaluationdescript.html
+++ b/src/main/resources/templates/admin/evaluationdescript/evaluationdescript.html
@@ -176,6 +176,8 @@
 <script src="../static/bootstrap/js/bootstrap-table.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
+<script src="../static/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
+
 <script src="../static/js/admin/evaluationdescript/evaluationdescript.js"></script>
 
 </body>
