--- a/src/main/resources/templates/admin/evaluationitem/evaluationitem.html
+++ b/src/main/resources/templates/admin/evaluationitem/evaluationitem.html
@@ -145,6 +145,8 @@
 <script src="../static/bootstrap/js/bootstrap-table.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
+<script src="../static/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
+
 <script src="../static/js/admin/evaluationitem/evaluationitem.js"></script>
 
 </body>
