--- a/src/main/resources/templates/admin/satisfysurveytarget/satisfysurveytargetTable.html
+++ b/src/main/resources/templates/admin/satisfysurveytarget/satisfysurveytargetTable.html
@@ -155,6 +155,8 @@
 <script src="../static/bootstrap/js/bootstrap-table.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
+<script src="../static/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
+
 <script src="../static/js/admin/satisfysurveytarget/satisfysurveytarget.js"></script>
 
 </body>
