--- a/src/main/resources/templates/project/samplebright/bright.html
+++ b/src/main/resources/templates/project/samplebright/bright.html
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>调查日期</label>
                     <div class="col-sm-4">
-                        <input type="date" class="form-control" id="diaochaDate" placeholder="抽样日期">
+                        <input type="date" class="form-control" id="diaochaDate" placeholder="调查日期">
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>录入日期</label>
                     <div class="col-sm-4">
-                        <input type="date" class="form-control" id="luruDate" placeholder="抽样日期">
+                        <input type="date" class="form-control" id="luruDate" placeholder="录入日期">
                     </div>
                 </div>
 
@@ -81,7 +81,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>录入人</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control" id="luruPer" placeholder="抽样日期">
+                        <input type="text" class="form-control" id="luruPer" placeholder="录入人">
                     </div>
                 </div>
             </div>
@@ -124,6 +124,7 @@
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
 <script src="../static/bootstrap/js/treeview.js"></script>
+<script src="../static/bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
 
 <script src="../static/js/project/samplebright/bright.js"></script>
 <script src="../static/js/admin/subscript/subscriptAdd.js"></script>
