中期答辩ppt发现的bug

--- a/src/main/resources/templates/project/resultinput/input/monthScore.html
+++ b/src/main/resources/templates/project/resultinput/input/monthScore.html
@@ -14,7 +14,7 @@
 
         <div class="divBorder">
             <h4 class="panel panel-heading h4font">
-                满意度调查录入
+                满意度月度总分查询
             </h4>
 
             <div class="panel-body">
