--- a/src/main/resources/templates/project/samplebright/brightsearch.html
+++ b/src/main/resources/templates/project/samplebright/brightsearch.html
@@ -16,7 +16,7 @@
 
         <div class="divBorder">
             <h4 class="panel panel-heading h4font">
-                评测指标维护
+                督查抽样结果查询
             </h4>
 
             <div class="panel-body">
